Changed kanji details HTML elements to dd dl and dt for easier formatting and readability. Next steps are to style correctly to prevent the elements moving around the UI too much when kanji with more readings or meanings are displayed.

--- a/public/content-scripts.css
+++ b/public/content-scripts.css
@@ -63,5 +63,14 @@
 
 .kanji-detail {
   text-align: center;
-  max-width: calc(600px / 100 * 30);
+  max-width: calc(600px / 100 * 75);
+}
+
+dl {
+  left: 20;
+}
+
+dd {
+  max-width: 400px;
+  text-wrap: balance;
 }
